--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,8 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temp Nexus</title>
   </head>
@@ -11,4 +10,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
